--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт Каталог</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page">
@@ -233,7 +234,7 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <div class="top-row">
+        <div class="footer-top-row">
           <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
           <ul class="footer-nav">
             <li><a href="">Компания</a></li>
@@ -243,7 +244,7 @@
             <li><a href="">Контакты</a></li>
           </ul>
         </div>
-        <div class="middle-row">
+        <div class="footer-middle-row">
           <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
           <ul class="footer-category">
             <li><a href="">Материалы</a></li>
@@ -252,14 +253,15 @@
             <li><a href="">Спецпредложения</a></li>
           </ul>
         </div>
-        <div class="bottom-row">
+        <div class="footer-bottom-row">
           <p>© 2010-2017 Компания "Техномарт" Все права защищены</p>
           <section class="socials">
             <div class="social-item vk"><a href="vk.com" target="_blank" aria-label="vk"></a></div>
             <div class="social-item facebook"><a href="facebook.com" target="_blank" aria-label="facebook"></a></div>
             <div class="social-item instagram"><a href="instagram.com" target="_blank" aria-label="instagram"></a></div>
           </section>
-          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">Разработано htmlacademy.ru</a>
+          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          <p>Разработано</p><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
         </div>
       </div>
     </footer>
