--- a/catalog.html
+++ b/catalog.html
@@ -13,25 +13,19 @@
           <div class="logo-top"><a href=""><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <div class="search">
             <form action="search.html" method="get">
+              <input type="text" id="search" placeholder="Поиск:">
               <label for="search">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
                   <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
                 </svg>
               </label>
-              <input type="text" id="search" placeholder="Поиск:">
             </form>
           </div>
           <div class="bookmarks">
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
-              <path fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"></path>
-            </svg><a href="">Закладки:</a><span>0</span>
+            <div class="bookmark-icon"></div><a href="">Закладки:</a><span>0</span>
           </div>
           <div class="cart">
-            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
-              <circle fill="#ffffff" cx="4.5" cy="13.5" r="1.5"></circle>
-              <circle fill="#ffffff" cx="12.5" cy="13.5" r="1.5"></circle>
-              <path fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"></path>
-            </svg><a href="">Корзина:</a><span>10</span>
+            <div class="cart-icon"></div><a href="">Корзина:</a><span>10</span>
           </div><a class="order" href="">Оформить заказ</a>
         </div>
         <div class="middle-row">
@@ -39,22 +33,24 @@
             <h2 class="visually-hidden">главные данные</h2>
             <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
           </div>
-          <div class="address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <div class="address">
+            <div class="phone-number">
+              <div class="phone"></div><a class="number" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            </div>
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="authorization">
-            <p class="customer">Равшан Джамшутович
+          <div class="authorization"><a class="customer">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
                 <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"></path>
-              </svg>
-            </p><a class="visually-hidden" href="">logout
+              </svg></a>
+            <p>Равшан Джамшутович</p><a class="logout" href="">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
                 <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
                 <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
               </svg></a>
-            <ul>
-              <li><a href="">Мои Заказы</a></li>
-              <li><a href="">Личный кабинет</a></li>
+            <ul class="personal">
+              <li class="personal-item"><a href="">Мои Заказы</a></li>
+              <li class="personal-item"><a href="">Личный кабинет</a></li>
             </ul>
           </div>
         </div>
@@ -74,12 +70,12 @@
     <main class="page-content">
       <div class="container">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item home"><a href="index.html"><img src="img/icon-home.svg" alt="home"></a></li>
+          <li class="breadcrumbs-item home"><a href="index.html"></a></li>
           <li class="breadcrumbs-item"><a href="">Каталог</a></li>
           <li class="breadcrumbs-item"><a href="">Инструмент</a></li>
           <li class="breadcrumbs-item"><a class="current">Перфораторы</a></li>
         </ul>
-        <h1>Перфораторы</h1>
+        <h1 class="content-title">Перфораторы</h1>
         <aside class="aside">
           <p class="filter">фильтр:</p>
           <form action="https://echo.htmlacademy.ru/courses" method="get">
@@ -87,11 +83,9 @@
               <legend>цена:</legend>
               <div class="choose-price">
                 <label for="rating"></label>
+                <input id="rate" name="rate" min="0" max="30000" step="500" value="0">
                 <input id="rate" name="rate" min="0" max="30000" step="500" value="30000">
               </div>
-              <div class="price-number"></div>
-              <div class="line"></div>
-              <div class="price-number"></div>
             </fieldset>
             <fieldset class="choose-filter">
               <legend>Производители:</legend>
@@ -133,18 +127,24 @@
         <section class="goods catalog">
           <div class="sort">
             <p class="sort-to">сортировка:</p>
-            <ul>
+            <ul class="sort-list">
               <li class="sort-to-price"><a href="">по цене</a></li>
               <li class="sort-to-type"><a href="">по типу</a></li>
               <li class="sort-to-functional"><a href="">по функионалу</a></li>
             </ul>
             <ul class="arrows">
-              <li class="arrow-item-up"><a href="">up</a></li>
-              <li class="arrow-item-down"><a href="">down</a></li>
+              <li class="arrow-item"><a class="arrow" href="" aria-label="up">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                    <path fill="#231F20" d="M5.5 0L0 10h11z"></path>
+                  </svg></a></li>
+              <li class="arrow-item"><a class="arrow" href="" aria-label="down">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                    <path fill="#231F20" d="M5.5 10L0 0h11"></path>
+                  </svg></a></li>
             </ul>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
@@ -152,7 +152,7 @@
             <p class="price">15500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
@@ -160,14 +160,14 @@
             <p class="price">25500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
@@ -175,7 +175,7 @@
             <p class="price">15500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
@@ -183,14 +183,14 @@
             <p class="price">25500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
@@ -198,7 +198,7 @@
             <p class="price">15500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
@@ -206,7 +206,7 @@
             <p class="price">25500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
@@ -214,8 +214,11 @@
           </div>
           <div class="good-in-cart visually-hidden">
             <div class="icon-mark"></div>
-            <p>товар добавлен в корзину!</p><a class="btn" href="">оформить заказ</a>
-            <button type="submit">продолжить покупки</button>
+            <p>Товар добавлен в корзину!</p>
+            <div class="close"></div>
+            <div class="order-buy"><a class="btn" href="">оформить заказ</a>
+              <button type="submit">продолжить покупки</button>
+            </div>
           </div>
           <div class="pager">
             <ul class="pager-list">
@@ -235,7 +238,7 @@
     <footer class="page-footer">
       <div class="container">
         <div class="footer-top-row">
-          <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
+          <div class="logo-bottom"><a href="index.html" alt="logo" aria-label="main-page"><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <ul class="footer-nav">
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
