--- a/index.html
+++ b/index.html
@@ -13,25 +13,19 @@
           <div class="logo-top"><a href=""><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <div class="search">
             <form action="search.html" method="get">
+              <input type="text" id="search" placeholder="Поиск:">
               <label for="search">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
                   <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
                 </svg>
               </label>
-              <input type="text" id="search" placeholder="Поиск:">
             </form>
           </div>
           <div class="bookmarks">
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
-              <path fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z"></path>
-            </svg><a href="">Закладки:</a><span>0</span>
+            <div class="bookmarks-icon"></div><a href="">Закладки:</a><span>0</span>
           </div>
           <div class="cart">
-            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
-              <circle fill="#ffffff" cx="4.5" cy="13.5" r="1.5"></circle>
-              <circle fill="#ffffff" cx="12.5" cy="13.5" r="1.5"></circle>
-              <path fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"></path>
-            </svg><a href="">Корзина:</a><span>0</span>
+            <div class="cart-icon"></div><a href="">Корзина:</a><span>0</span>
           </div><a class="order" href="">Оформить заказ</a>
         </div>
         <div class="middle-row">
@@ -49,8 +43,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
                 <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
                 <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
-              </svg>
-              <p class="customer">Войти</p></a><a class="registration" href="registration.html">Регистриция</a></div>
+              </svg><a class="customer" href="login.html">Войти</a></a><a class="registration" href="registration.html">Регистриция</a></div>
         </div>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -114,7 +107,7 @@
         </header>
         <div class="goods">
           <div class="goods-item"><a href=""><img src="img/Perforator_9000.jpg" alt="Perforator_9000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
@@ -122,7 +115,7 @@
             <p class="price">25500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
@@ -130,7 +123,7 @@
             <p class="price">15500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
@@ -138,7 +131,7 @@
             <p class="price">25500 Р.</p>
           </div>
           <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-            <div class="visually-hidden"><a href="">купить</a>
+            <div class="hidden"><a href="">купить</a>
               <button type="submit">в закладки</button>
             </div>
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
@@ -204,8 +197,9 @@
             <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a class="btn" href="">Заблудились? Напишите нам!</a>
           </div>
           <div class="send-form visually-hidden">
+            <div class="close"></div>
             <form action="https://echo.htmlacademy.ru/courses" method="post">
-              <p class="name-half-width">
+              <p class="name half-width">
                 <label for="introduce">Ваше имя:</label>
                 <input type="text" name="introduce" placeholder="Имя Фамилия">
               </p>
@@ -217,7 +211,7 @@
                 <label for="text">Текст письма:</label>
                 <textarea name="text" placeholder="В свободной форме" rows="6"></textarea>
               </p>
-              <div class="button">
+              <div class="form-button">
                 <button class="btn" type="submit">отправить</button>
               </div>
             </form>
@@ -228,7 +222,7 @@
     <footer class="page-footer">
       <div class="footer-container">
         <div class="footer-top-row">
-          <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
+          <div class="logo-bottom"><a href="index.html" alt="logo" aria-label="main-page"><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <ul class="footer-nav">
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
@@ -249,7 +243,7 @@
         <div class="footer-bottom-row">
           <p>© 2010-2017 Компания "Техномарт" Все права защищены</p>
           <section class="socials">
-            <div class="social-item"><a class="vk" href="vk.com" target="_blank" aria-label="vk"></a></div>
+            <div class="social-item vk"><a href="vk.com" target="_blank" aria-label="vk"></a></div>
             <div class="social-item facebook"><a href="facebook.com" target="_blank" aria-label="facebook"></a></div>
             <div class="social-item instagram"><a href="instagram.com" target="_blank" aria-label="instagram"></a></div>
           </section>
