--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
         <div class="left-column">
           <div class="categories-item material">
             <h3>материалы</h3><a class="click" href="">на любой вкус</a>
-            <div class="item-icon-material"></div>
           </div>
           <div class="categories-item tool">
             <h3>инструмент</h3><a class="click" href="">на все случаи</a>
-            <div class="item-icon-tool"></div>
           </div>
           <div class="categories-item slider">
             <div class="slider-item perf">
@@ -89,15 +87,12 @@
         <div class="right-column">
           <div class="categories-item technic">
             <h3>техника</h3><a class="click" href="">для стройки</a>
-            <div class="item-icon-technic"></div>
           </div>
           <div class="categories-item sale">
             <h3>скидка 50%</h3><a class="click" href="">на 350 товаров</a>
-            <div class="item-icon-sale"></div>
           </div>
           <div class="categories-item delivery">
             <h3>доставка</h3><a class="click" href="">бесплатно</a>
-            <div class="item-icon-delivery"></div>
           </div>
         </div>
       </section>
@@ -165,7 +160,7 @@
               <li class="service-tab-item" data-name="3"><a href="">Кредит</a></li>
             </ul>
             <div class="service-tab-content">
-              <div class="service-tab-item deliverity">
+              <div class="service-tab-item delive">
                 <h3>Доставка</h3>
                 <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
               </div>
