--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </form>
           </div>
           <div class="bookmarks">
-            <div class="bookmarks-icon"></div><a href="">Закладки:</a><span>0</span>
+            <div class="bookmarks-icon"></div><a href="">закладки:</a><span>0</span>
           </div>
           <div class="cart">
-            <div class="cart-icon"></div><a href="">Корзина:</a><span>0</span>
-          </div><a class="order" href="">Оформить заказ</a>
+            <div class="cart-icon"></div><a href="">корзина:</a><span>0</span>
+          </div><a class="order" href="">оформить заказ</a>
         </div>
         <div class="middle-row">
           <div class="slogan">
@@ -39,11 +39,11 @@
             </div>
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="authorization"><a class="enter" href="login.html" aria-label="login">
+          <div class="authorization"><a class="enter" href="login.html" aria-label="login">Войти
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
                 <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
                 <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
-              </svg><a class="customer" href="login.html">Войти</a></a><a class="registration" href="registration.html">Регистриция</a></div>
+              </svg></a><a class="registration" href="registration.html">Регистриция</a></div>
         </div>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -59,96 +59,98 @@
       </div>
     </header>
     <main class="page-content">
-      <section class="categories">
-        <div class="left-column">
-          <div class="categories-item material">
-            <h3>материалы</h3><a class="click" href="">на любой вкус</a>
-          </div>
-          <div class="categories-item tool">
-            <h3>инструмент</h3><a class="click" href="">на все случаи</a>
-          </div>
-          <div class="categories-item slider">
-            <div class="slider-item perf">
-              <h3>Перфораторы</h3>
-              <p>Настоящие мужские игрушки</p><a class="btn" href="catalog.html">Открыть каталог</a>
+      <div class="container">
+        <section class="categories">
+          <div class="left-column">
+            <div class="categories-item material">
+              <h3>материалы</h3><a class="categories-item-link" href="">на любой вкус</a>
             </div>
-            <div class="slider-item drill">
-              <h3>Дрели</h3>
-              <p>Соседям на радость!</p><a class="btn" href="catalog.html">Открыть каталог</a>
+            <div class="categories-item tool">
+              <h3>инструмент</h3><a class="categories-item-link" href="">на все случаи</a>
             </div>
-            <div class="controls">
-              <button class="dot active" type="button"></button>
-              <button class="dot" type="button"></button>
+            <div class="categories-item slider">
+              <div class="slider-item perf">
+                <h3>Перфораторы</h3>
+                <p>Настоящие мужские игрушки</p><a class="btn" href="catalog.html">Открыть каталог</a>
+              </div>
+              <div class="slider-item drill">
+                <h3>Дрели</h3>
+                <p>Соседям на радость!</p><a class="btn" href="catalog.html">Открыть каталог</a>
+              </div>
+              <div class="controls">
+                <button class="dot active" type="button"></button>
+                <button class="dot" type="button"></button>
+              </div>
+              <button class="prev" type="button"></button>
+              <button class="next" type="button"></button>
             </div>
-            <button class="prev" type="button"></button>
-            <button class="next" type="button"></button>
           </div>
-        </div>
-        <div class="right-column">
-          <div class="categories-item technic">
-            <h3>техника</h3><a class="click" href="">для стройки</a>
-          </div>
-          <div class="categories-item sale">
-            <h3>скидка 50%</h3><a class="click" href="">на 350 товаров</a>
-          </div>
-          <div class="categories-item delivery">
-            <h3>доставка</h3><a class="click" href="">бесплатно</a>
-          </div>
-        </div>
-      </section>
-      <section class="popular products">
-        <header class="popular-header">
-          <h3>Популярные товары:</h3><a class="btn" href="">все популярные товары</a>
-        </header>
-        <div class="goods">
-          <div class="goods-item"><a href=""><img src="img/Perforator_9000.jpg" alt="Perforator_9000"></a>
-            <div class="hidden"><a href="">купить</a>
-              <button type="submit">в закладки</button>
+          <div class="right-column">
+            <div class="categories-item technic">
+              <h3>техника</h3><a class="categories-item-link" href="">для стройки</a>
             </div>
-            <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
-            <s class="old-price">32500 Р.</s>
-            <p class="price">25500 Р.</p>
-          </div>
-          <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
-            <div class="hidden"><a href="">купить</a>
-              <button type="submit">в закладки</button>
+            <div class="categories-item sale">
+              <h3>скидка 50%</h3><a class="categories-item-link" href="">на 350 товаров</a>
             </div>
-            <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-            <s class="old-price">22500 Р.</s>
-            <p class="price">15500 Р.</p>
-          </div>
-          <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
-            <div class="hidden"><a href="">купить</a>
-              <button type="submit">в закладки</button>
+            <div class="categories-item delivery">
+              <h3>доставка</h3><a class="categories-item-link" href="">бесплатно</a>
             </div>
-            <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-            <s class="old-price">30500 Р.</s>
-            <p class="price">25500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
-            <div class="hidden"><a href="">купить</a>
-              <button type="submit">в закладки</button>
+        </section>
+        <section class="popular products">
+          <header class="popular-header">
+            <h3>Популярные товары:</h3><a class="btn" href="">все популярные товары</a>
+          </header>
+          <div class="goods">
+            <div class="goods-item"><a href=""><img src="img/Perforator_9000.jpg" alt="Perforator_9000"></a>
+              <div class="hidden"><a href="">купить</a>
+                <button type="submit">в закладки</button>
+              </div>
+              <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
+              <s class="old-price">32500 Р.</s>
+              <p class="price">25500 Р.</p>
             </div>
-            <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-            <p class="price">12500 Р.</p>
+            <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
+              <div class="hidden"><a href="">купить</a>
+                <button type="submit">в закладки</button>
+              </div>
+              <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
+              <s class="old-price">22500 Р.</s>
+              <p class="price">15500 Р.</p>
+            </div>
+            <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
+              <div class="hidden"><a href="">купить</a>
+                <button type="submit">в закладки</button>
+              </div>
+              <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+              <s class="old-price">30500 Р.</s>
+              <p class="price">25500 Р.</p>
+            </div>
+            <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
+              <div class="hidden"><a href="">купить</a>
+                <button type="submit">в закладки</button>
+              </div>
+              <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+              <p class="price">12500 Р.</p>
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="popular manufacturer">
-        <header class="popular-header">
-          <h3>Популярные Производители:</h3><a class="btn" href="">все производители</a>
-        </header>
-        <ul class="manufacturers">
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/bosch.png" alt="bosch"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Makita.png" alt="Makita"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/DeWALT.png" alt="DeWALT"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Интерскол.png" alt="Интерскол"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Hitachi.png" alt="Hitachi"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/LG.png" alt="LG"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/AEG.png" alt="AEG"></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Metabo.png" alt="Metabo"></a></li>
-        </ul>
-      </section>
+        </section>
+        <section class="popular manufacturer">
+          <header class="popular-header">
+            <h3>Популярные Производители:</h3><a class="btn" href="">все производители</a>
+          </header>
+          <ul class="manufacturers">
+            <li class="manufacturers-item"><a href="" target="_blank"><img src="img/bosch.png" alt="bosch"></a></li>
+            <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Makita.png" alt="Makita"></a></li>
+            <li class="manufacturers-item"><a href="" target="_blank"><img src="img/DeWALT.png" alt="DeWALT"></a></li>
+            <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Интерскол.png" alt="Интерскол"></a></li>
+            <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Hitachi.png" alt="Hitachi"></a></li>
+            <li class="manufacturers-item"><a href="" target="_blank"><img src="img/LG.png" alt="LG"></a></li>
+            <li class="manufacturers-item"><a href="" target="_blank"><img src="img/AEG.png" alt="AEG"></a></li>
+            <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Metabo.png" alt="Metabo"></a></li>
+          </ul>
+        </section>
+      </div>
       <div class="company-info-wrapper">
         <div class="service">
           <h3>Сервисы</h3>
@@ -160,15 +162,15 @@
               <li class="service-tab-item" data-name="3"><a href="">Кредит</a></li>
             </ul>
             <div class="service-tab-content">
-              <div class="service-tab-item delive">
+              <div class="service-tab-item service-tab-delivery">
                 <h3>Доставка</h3>
                 <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
               </div>
-              <div class="service-tab-item guarantee">
+              <div class="service-tab-item service-tab-guarantee">
                 <h3>Гарантия</h3>
                 <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
               </div>
-              <div class="service-tab-item credit">
+              <div class="service-tab-item service-tab-credit">
                 <h3>Кредит</h3>
                 <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p><a href="">отправить заявку</a>
               </div>
@@ -190,26 +192,6 @@
             <h2>Контакты</h2>
             <p>можете выбрать товар сами, заехав в наш офис:</p>
             <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a class="btn" href="">Заблудились? Напишите нам!</a>
-          </div>
-          <div class="send-form visually-hidden">
-            <div class="close"></div>
-            <form action="https://echo.htmlacademy.ru/courses" method="post">
-              <p class="name half-width">
-                <label for="introduce">Ваше имя:</label>
-                <input type="text" name="introduce" placeholder="Имя Фамилия">
-              </p>
-              <p class="e-mail half-width">
-                <label for="e-mail">Ваш e-mail:</label>
-                <input type="text" name="e-mail" placeholder="email@example.com">
-              </p>
-              <p class="text full-width">
-                <label for="text">Текст письма:</label>
-                <textarea name="text" placeholder="В свободной форме" rows="6"></textarea>
-              </p>
-              <div class="form-button">
-                <button class="btn" type="submit">отправить</button>
-              </div>
-            </form>
           </div>
         </div>
       </div>
@@ -247,5 +229,26 @@
         </div>
       </div>
     </footer>
+    <div class="popup-write-us">
+      <button class="close" type="submit"></button>
+      <form action="https://echo.htmlacademy.ru/courses" method="post">
+        <p class="name half-width">
+          <label for="introduce">Ваше имя:</label>
+          <input type="text" name="introduce" id="introduce" placeholder="Имя Фамилия">
+        </p>
+        <p class="e-mail half-width">
+          <label for="e-mail">Ваш e-mail:</label>
+          <input type="e-mail" name="e-mail" id="e-mail" placeholder="email@example.com">
+        </p>
+        <p class="text full-width">
+          <label for="text">Текст письма:</label>
+          <textarea name="message" id="text" placeholder="В свободной форме" rows="6"></textarea>
+        </p>
+        <div class="form-button">
+          <button class="btn" type="submit">отправить</button>
+        </div>
+      </form>
+    </div>
+    <div class="map"></div>
   </body>
 </html>
