--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <div class="container">
         <div class="top-row">
-          <div class="logo-top"><a href=""><img src="img/logo-technomart.svg" alt="logo"></a></div>
+          <div class="logo-top"><a href="index.html"><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <div class="search">
             <form action="search.html" method="get">
               <input type="text" id="search" placeholder="Поиск:">
@@ -22,11 +22,11 @@
             </form>
           </div>
           <div class="bookmarks">
-            <div class="bookmark-icon"></div><a href="">Закладки:</a><span>0</span>
+            <div class="bookmark-icon"></div><a href="">закладки:</a><span>0</span>
           </div>
           <div class="cart">
-            <div class="cart-icon"></div><a href="">Корзина:</a><span>10</span>
-          </div><a class="order" href="">Оформить заказ</a>
+            <div class="cart-icon"></div><a href="">корзина:</a><span>10</span>
+          </div><a class="order" href="">оформить заказ</a>
         </div>
         <div class="middle-row">
           <div class="slogan">
@@ -128,12 +128,12 @@
           <div class="sort">
             <p class="sort-to">сортировка:</p>
             <ul class="sort-list">
-              <li class="sort-to-price"><a href="">по цене</a></li>
+              <li class="sort-to-price"><a class="active" href="">по цене</a></li>
               <li class="sort-to-type"><a href="">по типу</a></li>
               <li class="sort-to-functional"><a href="">по функионалу</a></li>
             </ul>
             <ul class="arrows">
-              <li class="arrow-item"><a class="arrow" href="" aria-label="up">
+              <li class="arrow-item"><a class="arrow active" href="" aria-label="up">
                   <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                     <path fill="#231F20" d="M5.5 0L0 10h11z"></path>
                   </svg></a></li>
@@ -212,14 +212,6 @@
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
-          <div class="good-in-cart visually-hidden">
-            <div class="icon-mark"></div>
-            <p>Товар добавлен в корзину!</p>
-            <div class="close"></div>
-            <div class="order-buy"><a class="btn" href="">оформить заказ</a>
-              <button type="submit">продолжить покупки</button>
-            </div>
-          </div>
           <div class="pager">
             <ul class="pager-list">
               <li class="pager-item"><a class="current">1</a></li>
@@ -268,5 +260,13 @@
         </div>
       </div>
     </footer>
+    <div class="cart-popup">
+      <div class="icon-mark"></div>
+      <p>Товар добавлен в корзину!</p>
+      <div class="close"></div>
+      <div class="order-buy"><a class="btn" href="">оформить заказ</a>
+        <button type="submit">продолжить покупки</button>
+      </div>
+    </div>
   </body>
 </html>
