--- a/catalog.html
+++ b/catalog.html
@@ -8,17 +8,13 @@
   </head>
   <body class="page">
     <header class="page-header">
-      <div class="container">
-        <div class="top-row">
+      <div class="top-row">
+        <div class="container">
           <div class="logo-top"><a href="index.html"><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <div class="search">
             <form action="search.html" method="get">
+              <label class="search-icon" for="search"></label>
               <input type="text" id="search" placeholder="Поиск:">
-              <label for="search">
-                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-                  <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
-                </svg>
-              </label>
             </form>
           </div>
           <div class="bookmarks">
@@ -28,6 +24,8 @@
             <div class="cart-icon"></div><a href="">корзина:</a><span>10</span>
           </div><a class="order" href="">оформить заказ</a>
         </div>
+      </div>
+      <div class="container">
         <div class="middle-row">
           <div class="slogan">
             <h2 class="visually-hidden">главные данные</h2>
@@ -228,35 +226,39 @@
       </div>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <div class="footer-top-row">
+      <div class="footer-top-row">
+        <div class="container">
           <div class="logo-bottom"><a href="index.html" alt="logo" aria-label="main-page"><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <ul class="footer-nav">
-            <li><a href="">Компания</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
+            <li class="footer-nav-item"><a href="">Компания</a></li>
+            <li class="footer-nav-item"><a href="">Новости</a></li>
+            <li class="footer-nav-item"><a href="catalog.html">Каталог</a></li>
+            <li class="footer-nav-item"><a href="">Доставка</a></li>
+            <li class="footer-nav-item"><a href="">Контакты</a></li>
           </ul>
         </div>
         <div class="footer-middle-row">
-          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-          <ul class="footer-category">
-            <li><a href="">Материалы</a></li>
-            <li><a href="">Техника</a></li>
-            <li><a href="">Инструмент</a></li>
-            <li><a href="">Спецпредложения</a></li>
-          </ul>
+          <div class="container">
+            <p class="footer-address">г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+            <ul class="footer-category">
+              <li class="footer-category-item"><a href="">Материалы</a></li>
+              <li class="footer-category-item"><a href="">Техника</a></li>
+              <li class="footer-category-item"><a href="">Инструмент</a></li>
+              <li class="footer-category-item"><a href="">Спецпредложения</a></li>
+            </ul>
+          </div>
         </div>
         <div class="footer-bottom-row">
-          <p>© 2010-2017 Компания "Техномарт" Все права защищены</p>
-          <section class="socials">
-            <div class="social-item vk"><a href="vk.com" target="_blank" aria-label="vk"></a></div>
-            <div class="social-item facebook"><a href="facebook.com" target="_blank" aria-label="facebook"></a></div>
-            <div class="social-item instagram"><a href="instagram.com" target="_blank" aria-label="instagram"></a></div>
-          </section>
-          <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          <p>Разработано</p><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
+          <div class="container">
+            <p class="footer-rights">© 2010-2017 Компания "Техномарт" Все права защищены</p>
+            <section class="socials">
+              <div class="social-item vk"><a href="vk.com" target="_blank" aria-label="vk"></a></div>
+              <div class="social-item facebook"><a href="facebook.com" target="_blank" aria-label="facebook"></a></div>
+              <div class="social-item instagram"><a href="instagram.com" target="_blank" aria-label="instagram"></a></div>
+            </section>
+            <p class="feedback">Обратная связь<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+            <p class="developed">Разработано<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a></p>
+          </div>
         </div>
       </div>
     </footer>
