--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
           <div class="logo-top"><a href=""><img src="img/logo-technomart.svg" alt="logo"></a></div>
           <div class="search">
             <form action="search.html" method="get">
-              <label class="search-icon" for="search"></label>
               <input type="text" id="search" placeholder="Поиск:">
+              <label class="search-icon" for="search">
+                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+                  <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"></path>
+                </svg>
+              </label>
             </form>
           </div>
           <div class="bookmarks">
@@ -61,12 +65,10 @@
         <div class="container">
           <div class="left-column">
             <div class="categories-item material">
-              <h3>материалы</h3>
-              <div class="categories-item-link"><a href="">на любой вкус</a></div>
+              <h3>материалы</h3><a href="">на любой вкус</a>
             </div>
             <div class="categories-item tool">
-              <h3>инструмент</h3>
-              <div class="categories-item-link"><a href="">на все случаи</a></div>
+              <h3>инструмент</h3><a href="">на все случаи</a>
             </div>
             <div class="categories-item slider">
               <div class="slider-item perf">
@@ -87,16 +89,13 @@
           </div>
           <div class="right-column">
             <div class="categories-item technic">
-              <h3>техника</h3>
-              <div class="categories-item-link"><a href="">для стройки</a></div>
+              <h3>техника</h3><a href="">для стройки</a>
             </div>
             <div class="categories-item sale">
-              <h3>скидка 50%</h3>
-              <div class="categories-item-link"><a href="">на 350 товаров</a></div>
+              <h3>скидка 50%</h3><a href="">на 350 товаров</a>
             </div>
             <div class="categories-item delivery">
-              <h3>доставка</h3>
-              <div class="categories-item-link"><a href="">бесплатно</a></div>
+              <h3>доставка</h3><a href="">бесплатно</a>
             </div>
           </div>
         </div>
@@ -167,31 +166,28 @@
             </div>
             <div class="service-wrapper">
               <ul class="service-tab-nav">
-                <li class="service-tab-item" data-name="1"><a href="">Доставка</a></li>
-                <li class="service-tab-item" data-name="2"><a href="">Гарантия</a></li>
-                <li class="service-tab-item" data-name="3"><a href="">Кредит</a></li>
+                <li class="service-nav-item active" data-name="1"><a href="">Доставка</a></li>
+                <li class="service-nav-item" data-name="2"><a href="">Гарантия</a></li>
+                <li class="service-nav-item" data-name="3"><a href="">Кредит</a></li>
               </ul>
               <div class="service-tab-content">
-                <div class="service-tab-item">
+                <div class="service-tab-item service-tab-delivery active">
                   <div class="text-delivery">
                     <h3>Доставка</h3>
                     <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
                   </div>
-                  <div class="service-tab-delivery"></div>
                 </div>
-                <div class="service-tab-item">
+                <div class="service-tab-item service-tab-guarantee">
                   <div class="text-guarantee">
                     <h3>Гарантия</h3>
                     <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
                   </div>
-                  <div class="service-tab-guarantee"></div>
                 </div>
-                <div class="service-tab-item">
+                <div class="service-tab-item service-tab-credit">
                   <div class="text-credit">
                     <h3>Кредит</h3>
                     <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-                  </div><a href="">отправить заявку</a>
-                  <div class="service-tab-credit"></div>
+                  </div><a class="btn" href="">отправить заявку</a>
                 </div>
               </div>
             </div>
@@ -204,9 +200,9 @@
               <p class="text">Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
               <p class="text">Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:</p>
               <ul class="partners">
-                <li class="partner">Деловые линии</li>
-                <li class="partner">Автотрейдинг</li>
-                <li class="partner">ЖелДорЭкспедиция</li>
+                <li class="partners-item">Деловые линии</li>
+                <li class="partners-item">Автотрейдинг</li>
+                <li class="partners-item">ЖелДорЭкспедиция</li>
               </ul><a class="btn" href="about.html">Подробнее о компании</a>
             </div>
             <div class="contacts">
